# opus-fast-mosestokenizer

./: .gitignore  CMakeLists.txt  error.txt
cmake/: FindGlib2.cmake  FindRE2.cmake
include/mosestokenizer/: Tokenizer.h
src/: Tokenizer.cpp
